[#1585] Migrate to Jakarta EE 10 (3.x) (#2018)
* Update to 3.0.0

Includes version bumps:
- Java: 11 -> 17
- Ehcache: 2.6 -> 3.10
- Guice: 6 -> 7
- Jetty: 9.4.56.v2024.. -> 12.0
  - `org.eclipse.jetty` -> `org.eclipse.jetty.ee10`
- Jakarta EE: 8 -> 10
  - Activation: 1.2 -> 2.1
  - Annotation: 1.3 -> 2.1
  - Enterprise CDI API: 2.0 -> 4.0
  - JSON API: 1.1 -> 2.1
  - JSON Bind: 1.0 -> 3.0
  - Servlet: 4.0 -> 6.0
  - Servlet JSP API: 2.2 -> 3.1
  - Validation API: 2.0 -> 3.0
  - WS RS API: 2.1 -> 3.1
  - XML Bind: 2.3 -> 4.0
- Omnifaces: 4.6.1
- CXF RT Client: 3.6 -> 4.0
- Glassfish JAXB RT: 2.3 -> 4.0
- Spring: 5.3 -> 6.2
- Spring Boot: 2.7 -> 3.4
- Hibernate: 5.6 -> 6.6 (sample project)

Concerns:
- Ehcache migration most certainly needs revision
- CI untested (specially Jenkins CD)
- `flowlogix`, `omnifaces`, and a few other libs I have no knowledge of,
  certainly need attention
- Spring remoting seems to have been dropped from Spring Context, not
  sure if replaceable

Known issues:
- No immediate suitable replacement for `org.eclipse.jetty:apache-jstl`
- Ehcache 3.10 is pulling earlier version of jaxb runtime -> conflicting
  - Added exclusion to circumvent woes
- Some web integration tests aren't up to speed
  - Embedded jetty-based ITs fail, server reports 503
  - Arquillian IT fails
  - Meecrowave support missing (solved in unreleased 2.0.0?)

* Remove lingering guice3 IT pom.xml

* Suppress unchecked cast warning

* Revert ill merge in test case

* Properly disable meecrowave-based IT

* Remove Shiro Spring remoting test

* Remove lingering jetty injection argument from IT test case

* Restore dependency details lost in translation

* Remove stray type for runtime type inference / reification attempt

Shouldn't have included this 🤦 This was a miserable attempt to obtain
the concrete `Class<?>` instance for the request key and value types for
caches.  Please excuse my desperation.

* fix(lang): Fix resource retrieval as URL instead of stream

* fix: Fix typo