@@ -15,6 +15,7 @@ package org.apache.shiro.testing.jakarta.ee;
 
 import static org.apache.shiro.testing.jakarta.ee.StatisticsResource.increment;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.concurrent.atomic.AtomicInteger;
 import jakarta.annotation.PostConstruct;
@@ -33,6 +34,7 @@ import org.apache.shiro.authz.annotation.RequiresUser;
 @RequiresUser
 @Slf4j
 public class ProtectedSessionScopedBean implements Serializable {
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private static final AtomicInteger INSTANCE_COUNT = new AtomicInteger();
@@ -49,6 +51,6 @@ public class ProtectedSessionScopedBean implements Serializable {
     }
 
     public String hello() {
-        return String.format("Hello from SessionScoped %s", count);
+        return "Hello from SessionScoped %s".formatted(count);
     }
 }
